--- a/composer.json
+++ b/composer.json
@@ -1,44 +1,46 @@
 {
-  "name": "dynamic/silverstripe-calendar",
-  "description": "A calendar module for the SilverStripe CMS.",
-  "keywords": [
-    "silverstripe",
-    "module",
-    "calendar",
-    "events"
-  ],
-  "license": "BSD-3-Clause",
-  "type": "silverstripe-vendormodule",
-  "require": {
-    "silverstripe/recipe-cms": "^1.0 || ^4.0",
-    "silverstripe/vendor-plugin": "^1.0",
-    "symbiote/silverstripe-gridfieldextensions": "^3.0",
-    "unclecheese/display-logic": "^2.0"
-  },
-  "require-dev": {
-    "phpunit/PHPUnit": "^5.7",
-    "squizlabs/php_codesniffer": "*"
-  },
-  "autoload": {
-    "psr-4": {
-      "Dynamic\\Calendar\\": "src/",
-      "Dynamic\\Calendar\\Tests\\": "tests/"
+    "name": "dynamic/silverstripe-calendar",
+    "description": "A calendar module for the SilverStripe CMS.",
+    "keywords": [
+        "silverstripe",
+        "module",
+        "calendar",
+        "events"
+    ],
+    "license": "BSD-3-Clause",
+    "type": "silverstripe-vendormodule",
+    "require": {
+        "nesbot/carbon": "^1.0",
+        "silverstripe/recipe-cms": "^1.0 || ^4.0",
+        "silverstripe/lumberjack": "^2.0",
+        "silverstripe/vendor-plugin": "^1.0",
+        "symbiote/silverstripe-gridfieldextensions": "^3.0",
+        "unclecheese/display-logic": "^2.0"
+    },
+    "require-dev": {
+        "phpunit/PHPUnit": "^5.7",
+        "squizlabs/php_codesniffer": "*"
+    },
+    "autoload": {
+        "psr-4": {
+            "Dynamic\\Calendar\\": "src/",
+            "Dynamic\\Calendar\\Tests\\": "tests/"
+        }
+    },
+    "authors": [
+        {
+            "name": "Dynamic Inc",
+            "email": "dev@dyamicagency.com",
+            "homepage": "http://www.dynamicagency.com"
+        }
+    ],
+    "extra": {
+        "branch-alias": {
+            "dev-master": "1.0.x-dev"
+        }
+    },
+    "scripts": {
+        "lint": "vendor/bin/phpcs src/ tests/",
+        "lint-clean": "vendor/bin/phpcbf src/ tests/"
     }
-  },
-  "authors": [
-    {
-      "name": "Dynamic Inc",
-      "email": "dev@dyamicagency.com",
-      "homepage": "http://www.dynamicagency.com"
-    }
-  ],
-  "extra": {
-    "branch-alias": {
-      "dev-master": "1.0.x-dev"
-    }
-  },
-  "scripts": {
-    "lint": "vendor/bin/phpcs src/ tests/",
-    "lint-clean": "vendor/bin/phpcbf src/ tests/"
-  }
 }
