--- a/composer.json
+++ b/composer.json
@@ -11,14 +11,13 @@
     "type": "silverstripe-vendormodule",
     "require": {
         "nesbot/carbon": "^1.0",
-        "silverstripe/recipe-cms": "^1.0 || ^4.0",
+        "silverstripe/cms": "^4.0",
         "silverstripe/lumberjack": "^2.0",
-        "silverstripe/vendor-plugin": "^1.0",
         "symbiote/silverstripe-gridfieldextensions": "^3.0",
         "unclecheese/display-logic": "^2.0"
     },
     "require-dev": {
-        "phpunit/PHPUnit": "^5.7",
+        "phpunit/phpunit": "^5.7",
         "squizlabs/php_codesniffer": "*"
     },
     "autoload": {
