--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     "type": "silverstripe-vendormodule",
     "require": {
         "nesbot/carbon": "^1.0",
-        "silverstripe/cms": "^4.0",
+        "silverstripe/recipe-cms": "^4.0",
         "silverstripe/lumberjack": "^2.0",
         "symbiote/silverstripe-gridfieldextensions": "^3.0",
         "unclecheese/display-logic": "^2.0"
