--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,9 @@
         "silverstripe/cms": "^4.0",
         "silverstripe/lumberjack": "^2.0",
         "symbiote/silverstripe-gridfieldextensions": "^3.0",
-        "unclecheese/display-logic": "^2.0"
+        "unclecheese/display-logic": "^2.0",
+        "rlanvin/php-rrule": "^2.2",
+        "symbiote/silverstripe-queuedjobs": "^4.4"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.7",
