REFACTOR implement RRule library for recursion (#19)
* REFACTOR implement RRule library for recursion

Refactor RecursiveEventFactory to utilize generated dates from RRUle library

* UPDATE correct enum usage

UPDATE cms UX for recursion field placement

* UPDATE allow accessing recursion date set from factory

UPDATE cms fields

* UPDATE prune unused classes and methods

* UPDATE remove unused test class

* UPDATE recursive event creation and management logic

* BUGFIX only trigger recursion if config is set

* REFACTOR remove CalendarConfig

UPDATE CalendarAdmin to extend ModelAdmin

* BUGFIX remove unused templates breaking ModelAdmin

* UPDATE location of recursion generation

* UPDATE working recursion logic

This has disabled the relation duplication as it currently causes an infinite loop.

* UPDATE summary to include recursion count

* UPDATE test classes based on adjustments

* UPDATE final adjustments

* UPDATE allowed failures

--- a/_config/config.yml
+++ b/_config/config.yml
@@ -1,5 +1,7 @@
 ---
 Name: calendar
 ---
-Dynamic\Calendar\Model\Event:
-  instances_to_show: 3
+
+Dynamic\Calendar\Page\RecursiveEvent:
+  sync_relations:
+    - Categories
