--- a/.travis.yml
+++ b/.travis.yml
@@ -11,14 +11,16 @@ env:
 matrix:
   include:
     - php: 7.2
-      env: DB=PGSQL RECIPE_VERSION=4.4.x-dev PHPUNIT_TEST=1 PHPCS_TEST=1
+      env: DB=PGSQL RECIPE_VERSION=4.4.x-dev PHPUNIT_TEST=1
     - php: 7.3
       env: DB=PGSQL RECIPE_VERSION=4.4.x-dev PHPUNIT_TEST=1 PHPCS_TEST=1
+    - php: 7.3
+      env: DB=PGSQL RECIPE_VERSION=4.4.x-dev PHPUNIT_COVERAGE_TEST=1
     - php: 7.4
-      env: DB=MYSQL RECIPE_VERSION=4.x-dev PHPUNIT_COVERAGE_TEST=1
+      env: DB=MYSQL RECIPE_VERSION=4.x-dev
   allow_failures:
     - php: 7.4
-      env: DB=MYSQL RECIPE_VERSION=4.x-dev PHPUNIT_COVERAGE_TEST=1
+      env: DB=MYSQL RECIPE_VERSION=4.x-dev
 
 before_script:
   - phpenv rehash
