--- a/composer.json
+++ b/composer.json
@@ -11,16 +11,21 @@
     "type": "silverstripe-vendormodule",
     "require": {
         "nesbot/carbon": "^1.0",
+        "rlanvin/php-rrule": "^2.2",
         "silverstripe/cms": "^4.0",
         "silverstripe/lumberjack": "^2.0",
         "symbiote/silverstripe-gridfieldextensions": "^3.0",
-        "unclecheese/display-logic": "^2.0",
-        "rlanvin/php-rrule": "^2.2",
-        "symbiote/silverstripe-queuedjobs": "^4.4"
+        "symbiote/silverstripe-queuedjobs": "^4.4",
+        "unclecheese/display-logic": "^2.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.7",
-        "squizlabs/php_codesniffer": "*"
+        "squizlabs/php_codesniffer": "^3.0",
+        "phpmd/phpmd": "^2.6",
+        "sebastian/phpcpd": "^3.0",
+        "phploc/phploc": "^4.0",
+        "pdepend/pdepend": "^2.5",
+        "theseer/phpdox": "^0.11.0"
     },
     "autoload": {
         "psr-4": {
