--- a/composer.json
+++ b/composer.json
@@ -10,22 +10,17 @@
     "license": "BSD-3-Clause",
     "type": "silverstripe-vendormodule",
     "require": {
-        "nesbot/carbon": "^1.0 || ^2.0",
+        "nesbot/carbon": "^3.0",
         "rlanvin/php-rrule": "^2.2",
-        "silverstripe/cms": "^4.0",
-        "silverstripe/lumberjack": "^2.0",
-        "symbiote/silverstripe-gridfieldextensions": "^3.0",
-        "symbiote/silverstripe-queuedjobs": "^4.4",
-        "unclecheese/display-logic": "^2.0"
+        "silverstripe/cms": "^5.0",
+        "silverstripe/lumberjack": "^3.0",
+        "symbiote/silverstripe-gridfieldextensions": "^4.0",
+        "symbiote/silverstripe-queuedjobs": "^5.0",
+        "unclecheese/display-logic": "^3.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.7",
-        "squizlabs/php_codesniffer": "^3.0",
-        "phpmd/phpmd": "^2.6",
-        "sebastian/phpcpd": "^3.0",
-        "phploc/phploc": "^4.0",
-        "pdepend/pdepend": "^2.5",
-        "theseer/phpdox": "^0.11.0"
+        "silverstripe/recipe-testing": "^3",
+        "squizlabs/php_codesniffer": "^3.7"
     },
     "autoload": {
         "psr-4": {
@@ -40,11 +35,6 @@
             "homepage": "http://www.dynamicagency.com"
         }
     ],
-    "extra": {
-        "branch-alias": {
-            "dev-master": "1.0.x-dev"
-        }
-    },
     "scripts": {
         "lint": "vendor/bin/phpcs src/ tests/",
         "lint-clean": "vendor/bin/phpcbf src/ tests/"
