--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,5 +10,5 @@ jobs:
     name: CI
     uses: silverstripe/gha-ci/.github/workflows/ci.yml@v1
     with:
-      phpcoverage: true
+      phpcoverage: false
       js: false
