--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
     },
     "require-dev": {
         "silverstripe/recipe-testing": "^3",
+        "silverstripe/standards": "^1",
         "squizlabs/php_codesniffer": "^3.7"
     },
     "autoload": {
