--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,21 @@
 {
     "name": "dynamic/silverstripe-calendar",
     "description": "A calendar module for the SilverStripe CMS.",
+    "license": "BSD-3-Clause",
+    "type": "silverstripe-vendormodule",
     "keywords": [
         "silverstripe",
         "module",
         "calendar",
         "events"
     ],
-    "license": "BSD-3-Clause",
-    "type": "silverstripe-vendormodule",
+    "authors": [
+        {
+            "name": "Dynamic Inc",
+            "email": "dev@dyamicagency.com",
+            "homepage": "http://www.dynamicagency.com"
+        }
+    ],
     "require": {
         "nesbot/carbon": "^3.0",
         "rlanvin/php-rrule": "^2.2",
@@ -19,27 +26,21 @@
         "unclecheese/display-logic": "^3.0"
     },
     "require-dev": {
+        "phpstan/extension-installer": "^1.3",
         "silverstripe/recipe-testing": "^3",
         "silverstripe/standards": "^1",
         "squizlabs/php_codesniffer": "^3.7"
     },
+    "minimum-stability": "dev",
+    "prefer-stable": true,
     "autoload": {
         "psr-4": {
             "Dynamic\\Calendar\\": "src/",
             "Dynamic\\Calendar\\Tests\\": "tests/"
         }
     },
-    "authors": [
-        {
-            "name": "Dynamic Inc",
-            "email": "dev@dyamicagency.com",
-            "homepage": "http://www.dynamicagency.com"
-        }
-    ],
     "scripts": {
         "lint": "vendor/bin/phpcs src/ tests/",
         "lint-clean": "vendor/bin/phpcbf src/ tests/"
-    },
-    "minimum-stability": "dev",
-    "prefer-stable": true
+    }
 }
