--- a/composer.json
+++ b/composer.json
@@ -41,6 +41,8 @@
     },
     "scripts": {
         "lint": "vendor/bin/phpcs src/ tests/",
-        "lint-clean": "vendor/bin/phpcbf src/ tests/"
+        "lint-clean": "vendor/bin/phpcbf src/ tests/",
+        "test": "vendor/bin/phpunit",
+        "phpstan": "vendor/bin/phpstan analyse -c phpstan.neon --memory-limit=2G src/ tests/"
     }
 }
