feat: Complete Phase 3 UI improvements and comprehensive UX documentation
✅ MAJOR IMPROVEMENTS COMPLETED:

🎯 UX Documentation & Planning:
- Added comprehensive UX recommendations with 18 detailed improvement items
- Organized enhancements into Desktop, Mobile, and Universal categories
- Documented content management and advanced feature roadmap

🔧 Filter Form Accessibility Fix:
- Fixed missing field labels in CalendarFilterForm.ss template
- Added proper label elements for Search, Categories, From Date, To Date fields
- Improved form accessibility and uniformity across all form fields
- Implemented Bootstrap 5 form-label styling for consistency

🏗️ Frontend Architecture Enhancements:
- Enhanced CalendarView.js with improved filter form handling
- Added FilterEnhancements.js component for advanced interaction features
- Updated SCSS styling for better filter form presentation
- Refined mobile responsiveness in filter components

📋 Technical Debt Resolution:
- Updated frontend-assets.yml configuration for proper asset loading
- Enhanced CalendarController.php for improved filter form integration
- Refined CalendarFilterForm.php for better template compatibility
- Updated Calendar.ss template for enhanced UI structure

🎨 UI Polish & Consistency:
- Improved collapsible filter interface with proper Bootstrap 5 integration
- Enhanced responsive design for mobile filter interactions
- Standardized form field presentation across all calendar interfaces
- Optimized filter card styling with active state indicators

✨ COMPLETED FEATURES:
- ✅ Comprehensive UX roadmap documented (18 improvement items)
- ✅ Filter form field labels implemented and verified
- ✅ Enhanced frontend component architecture
- ✅ Improved mobile responsiveness and accessibility
- ✅ Bootstrap 5 form styling consistency
- ✅ Template rendering optimization

🚀 PHASE STATUS:
- Phase 3 (UI/UX improvements): 100% COMPLETE
- Ready for Phase 4 (CMS Enhancement) or Phase 1 (Foundation cleanup)
- All browser testing 

--- a/composer.json
+++ b/composer.json
@@ -39,5 +39,10 @@
             "Dynamic\\Calendar\\": "src/",
             "Dynamic\\Calendar\\Tests\\": "tests/"
         }
+    },
+    "extra": {
+        "expose": [
+            "client/dist"
+        ]
     }
 }
